2006-07-11  Ruben Vermeersch  <ruben@Lambda1.be>

	* src/Banshee.Base/Plugins/PluginFactory.cs: Create user plugin dir if it
	doesn't exist. (BGO #346612) Makes life of plugin writers a bit easier as
	they can safely assume the user plugin dir exists.

	* src/Banshee.Plugins/Audioscrobbler/Queue.cs: Remove the unnecessairy
	test to check if the user plugin dir exists.

2006-07-10  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* src/Banshee.Base/Banshee.Cdrom.Gui/RecorderSpeedComboBox.cs:
	Fixed typo 

2006-07-08  Aaron Bockover  <aaron@abock.org>

	* libbanshee/gst-transcode-0.10.c: Expand virtual element 'cdwavenc'
	into a better pipeline to produce proper WAV PCM (proper endianness,
	width, depth, signed, rate, and channel attributes)

	* src/Banshee.Base/PipelineProfile.cs: Added support for virtual 'cdwavenc'

	* src/Banshee.Base/Banshee.Burner/BurnerSessionPreparer.cs: Use new virtual
	'cdwavenc' profile for writing audio CDs

2006-07-06  Aaron Bockover  <aaron@abock.org>

	Patch by Christopher Orr <chris@orr.me.uk> (BGO #346815)

	* src/Banshee.Base/PowerManagement.cs: Make Inhibit method generic;
	allow multiple reasons for inhibiting GNOME Power Manager.
	
	* src/Banshee.Base/Banshee.Burner/BurnerSessionRecorder.cs: Use Inhibit
	to stop computer suspending/hibernating while burning a CD.

2006-07-07  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Plugins/NotificationAreaIcon/NotificationAreaIconPlugin.cs:
	Ensure track info popup is not clipped on left side of 
	screen (BGO #346876, Edward Duffy)

2006-07-06  Aaron Bockover  <aaron@abock.org>

	Patch from James Willcox

	* configure.ac: Require ipod-sharp 0.6.0

	* src/Banshee.Base/TrackInfo.cs: Make cover_art_file protected

	* src/Banshee.Dap/Ipod/DatabaseRebuilder.cs:
	* src/Banshee.Dap/Ipod/IpodDap.cs:
	* src/Banshee.Dap/Ipod/IpodDapTrackInfo.cs: Updated to work with
	new ipod-sharp 0.6.0/SVN Track API and added cover art syncing support

2006-07-06  Aaron Bockover  <aaron@abock.org>
